Today's forecast implemented (icon not working)

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
             <article id="forecast-body">
                 <section id="selected-city">
                     <h2 id="city-header"></h2>
-                    <div class="data" id="temp"></div>
-                    <div class="data" id="wind"></div>
-                    <div class="data" id="hum"></div>
+                    <img id="icon-0"/>
+                    <div class="data" id="temp-0"></div>
+                    <div class="data" id="wind-0"></div>
+                    <div class="data" id="hum-0"></div>
                 </section>
 
                 <!-- Creates 5 day forecast section for selected city. -->
@@ -58,11 +59,31 @@
                     <h3>5-day Forecast:</h3>
                 </div>
                 <section id="forecast-cards">
-                    <div class="card" id="day-0">Card1</div>
-                    <div class="card" id="day-1">Card2</div>
-                    <div class="card" id="day-2">Card3</div>
-                    <div class="card" id="day-3">Card4</div>
-                    <div class="card" id="day-4">Card5</div>
+                    <div class="card" id="day-1">
+                        <div class="data" id="temp-1"></div>
+                        <div class="data" id="wind-1"></div>
+                        <div class="data" id="hum-1"></div>
+                    </div>
+                    <div class="card" id="day-2">
+                        <div class="data" id="temp-2"></div>
+                        <div class="data" id="wind-2"></div>
+                        <div class="data" id="hum-2"></div>
+                    </div>
+                    <div class="card" id="day-3">
+                        <div class="data" id="temp-3"></div>
+                        <div class="data" id="wind-3"></div>
+                        <div class="data" id="hum-3"></div>
+                    </div>
+                    <div class="card" id="day-4">
+                        <div class="data" id="temp-4"></div>
+                        <div class="data" id="wind-4"></div>
+                        <div class="data" id="hum-4"></div>
+                    </div>
+                    <div class="card" id="day-5">
+                        <div class="data" id="temp-5"></div>
+                        <div class="data" id="wind-5"></div>
+                        <div class="data" id="hum-5"></div>
+                    </div>
                 </section>
             </article>
         </div>
