--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                     <div class="history" id="history-8"></div>
                     <div class="history" id="history-9"></div>
                 </section>
+
+                <div>
+                    <button id="clear-button" class="search-btn">Clear History</button>
+                </div>
             </aside>
 
             <!-- Creates today's forecast section for selected city. -->
@@ -57,7 +61,7 @@
 
                 <!-- Creates 5 day forecast section for selected city. -->
             
-                <div>
+                <div id="five-day-forecast-header">
                     <h3>5-day Forecast:</h3>
                 </div>
                 <section id="forecast-cards">
