--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             </article>
         </div>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/dayjs.min.js"></script>
         <script src="./assets/script.js"></script>
   </body>
 </html>
